# boids

./: CMakeLists.txt  README.md  conanfile.txt  launch.sh
include/: arena.h  boid.h  mvla.h  qtree.h  rect.h  simulation.h  tpool.h
src/: arena.c  boid.c  qtree.c  raylib.c  rect.c  simulation.c  tpool.c
